# DiscreteSamplingFramework

./: .coveragerc  .gitignore  .gitmodules  Metrics.py  README.md  Tree_sample.py  additive_structure_example.py  create_tree.py  decision_tree_example.py  example.py  full file.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar_example.py  tree_structure
.github/workflows/: flake.yml  (+4 more)
AdditiveStructure/: example.py  split_merge.py
DiscreteSamplingDecisionTree/: Metrics.py  Test_tree.py  Tree_sample.py  create_tree.py  example.py
StanForRJMCMCProblems/: linear_array.stan  probabilistic_tree.stan
discretesampling/: __init__.py  discrete.py  spectrum.py
discretesampling.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.md
examples/: 5_targets_noisy.data.json  MCMC tutorial.ipynb  additive_structure_example.py  coin_example.py  decision_tree_example.py  hints.py  hints_fn.py  hints_tree_example.py  hints_tree_fn.py  mcmc_example.py  regression_decision_tree_example.py  rjmcmc_example.py  smc_MPI_example.py  smc_example.py  sonar_example.py  sonar_example_smc.py  spectrum_example.py  stan_model_example.py  univariate_gmm_example.py
tests/: test_additive_structure.py  test_additive_structure_numbers.py  test_decision_tree.py  test_discrete_variable.py  test_dt_metrics.py  test_executor.py  test_executor_MPI.py  test_mcmc.py  test_mix_model_structure.py  test_optimal_L_kernel.py  test_pad_restore.py  test_random.py  test_smc.py  test_smc_components.py  test_spectrum.py  test_tree_encoding.py  test_variable_size_redistribution.py
(+126 files in other folders)
