[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "discretesampling"
description = "Bayesian sampling over distributions of discrete variables"
readme = "README.md"
dynamic = ["version"]

[project.urls]
"Repository" = "https://github.com/DiscreteVariablesTaskForce/DiscreteSamplingFramework"

[tool.setuptools_scm]
