[flake8]
max-line-length = 127

[tool:pytest]
addopts =
    --cov-config=.coveragerc --cov-branch --cov-report term-missing --cov-report term
    --cov-report xml --cov=discretesampling -vv --strict-markers -rfE

[coverage:run]
relative_files = true

[options.packages.find]
exclude =
    docs
    tests
