[metadata]
name = DiscreteVarsSampling
author = University of Liverpool
author_email = someone@liverpool.ac.uk
description = A framework to represent discrete variables sampling.
url = https://github.com/DiscreteVariablesTaskForce/DiscreteSamplingFramework

[flake8]
max-line-length = 127

[tool:pytest]
addopts =
    --cov-config=.coveragerc --cov-branch --cov-report term-missing --cov-report term
    --cov-report xml --cov=discretesampling -vv --strict-markers -rfE

[coverage:run]
relative_files = true
